<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:weightSum="10">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7.5"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:weightSum="10">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/averiearmstead" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin">
                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grad_assist1_name"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/textView2"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grad_assist1_info" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7.5"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:weightSum="10">
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/jennifermccollum" />
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin">
                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grad_assist2_name"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/textView5"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grad_assist2_info"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7.5"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:weightSum="10">
                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/jamesshetler" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin">
                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grad_assist3_name"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/textView7"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grad_assist3_info"
                         />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_below="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:src="@drawable/applogo_35splash" />
</RelativeLayout>